# sweetyaar

./: .gitignore  AGENTS.md  README.md  boot.py  breadboard-wiring.md  esp32_prototype_board-erc.rpt  init.py  main.py  main_old.py  min_test-erc.rpt  platformio.ini  project-plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  start_sweetyaar.bash  sweetyaar.service
docs/: CNAME  bedtime-mode.md  index.html  manifest.webmanifest  pwa.md  regression-tests.md  sw.js
esp32_prototype_board/: README.md  block-diagram.md  component-defaults.md  connectors-explained.md  cost-estimate.md  esp32_prototype_board-drc.rpt  esp32_prototype_board-erc.rpt  esp32_prototype_board.kicad_pcb  esp32_prototype_board.kicad_prl  esp32_prototype_board.kicad_pro  esp32_prototype_board.kicad_sch  footprint-lock.md  fp-lib-table  fresh-chat-brief.md  next-steps.md  pcb-design-basics.md  pin-map.md  rev-a-decisions.md  rev-a-requirements.md  schematic-pass-1.md  schematic-status.md  sweetyaar_rev_a.kicad_sym  sym-lib-table
etc/: config.yaml  sweetyaar.json
sd_card_template/: README.txt  config.json
src/: BLEParentService.cpp  BLEParentService.h  BedtimeMode.cpp  BedtimeMode.h  ButtonHandler.cpp  ButtonHandler.h  Config.h  ContentCatalog.cpp  ContentCatalog.h  DebugA2DPSinkQueued.h  LowLatencyA2DPSinkQueued.h  NVSConfig.cpp  NVSConfig.h  ParentConfig.cpp  ParentConfig.h  PeripheralPower.h  StateMachine.cpp  StateMachine.h  WavPlayer.cpp  WavPlayer.h  audio_diagnostic.cpp  audio_library.py  audio_player.py  bt_diagnostic.cpp  bt_logger.py  config.py  controller.py  interfaces.py  main.cpp  (+5 more)
(+47 files in other folders)
